<LinearLayout
    xmlns:android= "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name :"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="75dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/userNameET"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password   :"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="75dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/passwordET"/>
    </LinearLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:id="@+id/loginButton"/>
</LinearLayout>
